Attempt to fix mypy errors on macOS

--- a/packages/ni-grpc-extensions/pyproject.toml
+++ b/packages/ni-grpc-extensions/pyproject.toml
@@ -43,8 +43,11 @@ traceloggingdynamic = { version = ">=1.0", platform = "win32" }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
-# Install traceloggingdynamic on Linux for type checking.
-traceloggingdynamic = { version = ">=1.0", platform = "linux" }
+# Install traceloggingdynamic on Linux and macOS for type checking.
+traceloggingdynamic = [
+  { version = ">=1.0", platform = "linux" },
+  { version = ">=1.0", platform = "darwin" }
+]
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
