--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   get_package_info:
-    name: Get package info for ${{ inputs.package-name }}
+    name: Get package info
     uses: ./.github/workflows/get_package_info.yml
     with:
       package-name: ${{ inputs.package-name }}
