--- a/.github/workflows/check_analyzers.yml
+++ b/.github/workflows/check_analyzers.yml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   check_analyzers:
-    name: Check Analyzers ${{ matrix.python-version }} - ${{ matrix.os }}
+    name: Analyze ${{ matrix.python-version }} - ${{ matrix.os }}
     strategy:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
