--- a/.github/workflows/test_package.yml
+++ b/.github/workflows/test_package.yml
@@ -35,8 +35,18 @@ jobs:
     needs: get_package_info
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: ./.github/actions/run_unit_tests
+      - name: Check out repo
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          submodules: true
+      - name: Set up Python
+        uses: ni/python-actions/setup-python@8554e7ef74e95c9762962205f45a1e10c48de671 # v0.5.1
+        id: setup-python
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Set up Poetry
+        uses: ni/python-actions/setup-poetry@8554e7ef74e95c9762962205f45a1e10c48de671 # v0.5.1
+      - uses: ./.github/actions/run_and_upload_unit_tests
         with:
           package-name: ${{ inputs.package-name }}
           package-basepath: ${{ needs.get_package_info.outputs.package-basepath }}
-          python-version: ${{ matrix.python-version }}
