Update names to include package name and some other minor naming changes

--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -34,7 +34,7 @@ on:
 
 jobs:
   check_codegen:
-    name: Check Codegen
+    name: Check codegen - ${{ inputs.package-name }}
     runs-on: ubuntu-latest
     defaults:
       run:
