--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,7 +39,7 @@ jobs:
   report_test_results:
     name: Report test results
     uses: ./.github/workflows/report_test_results.yml
-    needs: [test_package, checks_succeeded]
+    needs: [test_package]
     if: always()
     permissions:
       contents: read
