--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,13 +23,13 @@ jobs:
       package-name: ${{ matrix.package-name }}
   checks_succeeded:
     name: Checks succeeded
-    needs: [check_package]
+    needs: check_package
     runs-on: ubuntu-latest
     steps:
       - run: exit 0
   test_package:
     name: Test ${{ matrix.package-name }}
-    needs: [get_package_names]
+    needs: get_package_names
     strategy:
       matrix:
         package-name: ${{ fromJson(needs.get_package_names.outputs.package-names) }}
@@ -39,7 +39,7 @@ jobs:
   report_test_results:
     name: Report test results
     uses: ./.github/workflows/report_test_results.yml
-    needs: [test_package]
+    needs: test_package
     if: always()
     permissions:
       contents: read
