Aggregate check packages results into one check (#162)
* Update the version of analyze-project to one that works. Make a 'checks_succeeded' aggregation job for the multiple package checks.

* Update names of the steps

* Fix check_analyzers name

* Shorten names

* Attempt to fix mypy errors on macOS

* Shorten some more names

* Poetry lock

* Shorten names for lower-level jobs

* Introduce a ni-python-styleguide error for testing

* Shorten names for unit test jobs

* Shorten names for unit test jobs

* Turn run_unit_tests into a composite action

* Eliminate the workflow layer for 'run_unit_tests' and directly call 'run_and_upload_unit_tests' from 'test_package.yml' workflow

* Update names to include package name and some other minor naming changes

* Revert some unrelated changes.

* Revert job name changes

* Revert whitespace change

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,12 @@ jobs:
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
+  checks_succeeded:
+    name: Checks succeeded
+    needs: check_package
+    runs-on: ubuntu-latest
+    steps:
+      - run: exit 0
   test_package:
     name: Test ${{ matrix.package-name }}
     needs: get_package_names
