--- a/.github/workflows/check_analyzers.yml
+++ b/.github/workflows/check_analyzers.yml
@@ -47,6 +47,6 @@ jobs:
         uses: ni/python-actions/analyze-project@9768589f3e50672173dad75a6fc181e4a85d33fa # v0.7.0
         with:
           project-directory: ${{ github.workspace }}/${{ inputs.package-basepath }}/${{ inputs.package-name }}
-          extras: ${{ inputs.install-extras }}
+          install-args: "--extras '${{ inputs.install-extras }}'"
       - name: Bandit security checks
         run:  poetry run bandit -c pyproject.toml -r src/
