Add on: push to make the workflow available

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -10,6 +10,9 @@ on:
         options:
           - ni.protobuf.types
           - ni_grpc_extensions
+  push:
+    branches-ignore:
+      - '**'  # Never actually run on push
 
 jobs:
   draft_release:
