Update the choices in draft_release

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -9,7 +9,7 @@ on:
         type: choice
         options:
           - ni.protobuf.types
-          - ni_grpc_extensions
+          - ni-grpc-extensions
   push:
     branches:
       - 'users/jdixon/*'
