--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -31,42 +31,39 @@ on:
           - ni-grpc-extensions
 
 jobs:
+  check_selection:
+    if: inputs.package-name == 'none'
+    name: No package selected
+    runs-on: ubuntu-latest
+    steps:
+      - name: Show help message
+        run: |
+          echo "::error::'none' package selected. Please choose an actual package from the list."
+          exit 1
+          
   draft_release:
     name: Draft release for ${{ inputs.package-name }}
     runs-on: ubuntu-latest
     steps:
-      - name: Check package selection
-        run: |
-          if [[ "${{ inputs.package-name }}" == "none" ]]; then
-            echo "No package selected. Please choose a package to create a release for."
-            exit 1
-          fi
-          
       - name: Check out repo
-        if: inputs.package-name != 'none'
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Need full history for git tag and release notes
       - name: Set up Python
-        if: inputs.package-name != 'none'
         uses: ni/python-actions/setup-python@9768589f3e50672173dad75a6fc181e4a85d33fa # v0.7.0
         id: setup-python
       - name: Set up Poetry
-        if: inputs.package-name != 'none'
         uses: ni/python-actions/setup-poetry@9768589f3e50672173dad75a6fc181e4a85d33fa # v0.7.0
-      - name: Extract version from pyproject.toml
-        if: inputs.package-name != 'none'
-        id: get-version
+      - name: Get release details
+        id: get-release-details
         working-directory: packages/${{ inputs.package-name }}
         run: |
           project_version="$(poetry version --short)"
-          echo "version=$project_version" >> $GITHUB_OUTPUT
           echo "tag=${{ inputs.package-name }}/$project_version" >> $GITHUB_OUTPUT
           echo "title=${{ inputs.package-name }} $project_version" >> $GITHUB_OUTPUT
           echo "Found version: $project_version"
         shell: bash
       - name: Find previous tag
-        if: inputs.package-name != 'none'
         id: previous-tag
         run: |
           PACKAGE="${{ inputs.package-name }}"
@@ -80,11 +77,10 @@ jobs:
             echo "No previous tag found for package $PACKAGE"
           fi
       - name: Generate release notes
-        if: inputs.package-name != 'none'
         id: release-notes
         run: |
           PACKAGE="${{ inputs.package-name }}"
-          TAG="${{ steps.get-version.outputs.tag }}"
+          TAG="${{ steps.get-release-details.outputs.tag }}"
           PREVIOUS_TAG="${{ steps.previous-tag.outputs.previous-tag }}"
           
           if [[ -n "$PREVIOUS_TAG" ]]; then
@@ -115,11 +111,10 @@ jobs:
           echo "notes=$NOTES" >> $GITHUB_OUTPUT
           
       - name: Create draft release
-        if: inputs.package-name != 'none'
         uses: ncipollo/release-action@b7eabc95ff50cbeeedec83973935c8f306dfcd0b # v1.20.0
         with:
-          tag: ${{ steps.get-version.outputs.tag }}
-          name: ${{ steps.get-version.outputs.title }}
+          tag: ${{ steps.get-release-details.outputs.tag }}
+          name: ${{ steps.get-release-details.outputs.title }}
           body: |
             # Changes
             
