Set prerelease correctly on the draft release

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -115,4 +115,5 @@ jobs:
             
             ${{ steps.release-notes.outputs.notes }}
           draft: true
+          prerelease: ${{ contains(steps.get-release-details.outputs.tag, 'dev') && 'true' || 'false' }}
           commit: ${{ github.sha }}
