--- a/packages/ni.datamonikers.v1.client/pyproject.toml
+++ b/packages/ni.datamonikers.v1.client/pyproject.toml
@@ -38,6 +38,12 @@ requires-poetry = '>=2.1,<3.0'
 [tool.poetry.dependencies]
 ni-grpc-extensions = { version = ">=0.1.0.dev0", allow-prereleases = true }
 ni-datamonikers-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+grpcio-tools = [
+  { version = "1.49.1", python = ">=3.10,<3.12" },
+  { version = "1.59.0", python = ">=3.12,<3.13" },
+  { version = "1.67.0", python = ">=3.13,<3.14" },
+  { version = "1.75.1", python = "^3.14" },
+]
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
