--- a/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
@@ -43,6 +43,12 @@ pywin32 = { version = ">=303", platform = "win32" }
 deprecation = ">=2.1"
 traceloggingdynamic = { version = ">=1.0", platform = "win32" }
 python-decouple = ">=3.8"
+grpcio-tools = [
+  { version = "1.49.1", python = ">=3.10,<3.12" },
+  { version = "1.59.0", python = ">=3.12,<3.13" },
+  { version = "1.67.0", python = ">=3.13,<3.14" },
+  { version = "1.75.1", python = "^3.14" },
+]
 nidaqmx = { version = ">=0.8.0", extras = ["grpc"], optional = true }
 nidcpower = { version = ">=1.4.4", extras = ["grpc"], optional = true }
 nidigital = { version = ">=1.4.4", extras = ["grpc"], optional = true }
