--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -25,7 +25,8 @@ click = [
 grpcio-tools = [
   { version = "1.49.1", python = ">=3.10,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
-  { version = "1.67.0", python = "^3.13" },
+  { version = "1.67.0", python = ">=3.13,<3.14" },
+  { version = "1.75.1", python = "^3.14" },
 ]
 mypy-protobuf = ">=3.6"
 
