--- a/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
@@ -65,7 +65,8 @@ optional = true
 
 [tool.poetry.group.docs.dependencies]
 # The latest Sphinx requires a recent Python version.
-Sphinx = [  { version = ">=8.1", python = ">=3.10,<3.11" },
+Sphinx = [
+  { version = ">=8.1", python = ">=3.10,<3.11" },
   { version = ">=8.2", python = "^3.11" },
 ]
 sphinx-rtd-theme = ">=1.0.0"
