--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -23,10 +23,10 @@ click = [
 # When updating the grpcio-tools version, also update the minimum grpcio version
 # and regenerate gRPC stubs.
 grpcio-tools = [
-  { version = "1.49.1", python = ">=3.10,<3.12" },
-  { version = "1.59.0", python = ">=3.12,<3.13" },
-  { version = "1.67.0", python = ">=3.13,<3.14" },
-  { version = "1.75.1", python = "^3.14" },
+  { version = ">=1.49.1", python = ">=3.10,<3.12" },
+  { version = ">=1.59.0", python = ">=3.12,<3.13" },
+  { version = ">=1.67.0", python = ">=3.13,<3.14" },
+  { version = ">=1.75.1", python = "^3.14" },
 ]
 mypy-protobuf = ">=3.6"
 
