--- a/packages/ni.datamonikers.v1.client/pyproject.toml
+++ b/packages/ni.datamonikers.v1.client/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.datamonikers.v1.client"
-version = "0.1.0-dev2"
+version = "0.2.0.dev0"
 license = "MIT"
 description = "gRPC Client for NI Data Moniker Service"
 authors = [{name = "NI", email = "opensource@ni.com"}]
