--- a/packages/ni.datamonikers.v1.proto/pyproject.toml
+++ b/packages/ni.datamonikers.v1.proto/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.datamonikers.v1.proto"
-version = "0.1.0-dev1"
+version = "0.2.0.dev0"
 license = "MIT"
 description = "Protobuf data types and service stub for NI data moniker gRPC APIs"
 authors = [{name = "NI", email = "opensource@ni.com"}]
