Remove Python 3.9 support and add 3.14 (#209)
* Remove python 3.9 and add 3.14 support

* Update workflows to remove Python 3l9

* Update docs and a few other pyproject.toml refs to 3.9

* Update poetry.lock files and fix some projects so they install correctly with Python 3.14

* Update grpcio-tools for generator

* Remove unnecessary grpcio-tools reference

* Use >= for version of grpcio-tools

* Update .lock file

* Revert >= change for grpcio-tools to avoid dealing with new generated stubs

* Bump minor versions to indicate the supported Python version changes

* Update poetry.lock

---------

Co-authored-by: Joel Dixon <joel.dixon@emerson.com>

--- a/packages/ni.datamonikers.v1.proto/pyproject.toml
+++ b/packages/ni.datamonikers.v1.proto/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.datamonikers.v1.proto"
-version = "0.1.0-dev1"
+version = "0.2.0.dev0"
 license = "MIT"
 description = "Protobuf data types and service stub for NI data moniker gRPC APIs"
 authors = [{name = "NI", email = "opensource@ni.com"}]
@@ -19,15 +19,15 @@ classifiers = [
   "Operating System :: Microsoft :: Windows",
   "Operating System :: POSIX",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
 dynamic = ["dependencies"]
-requires-python = '>=3.9,<4.0'
+requires-python = '>=3.10,<4.0'
 
 [project.urls]
 repository = "https://github.com/ni/ni-apis-python"
@@ -62,7 +62,6 @@ optional = true
 [tool.poetry.group.docs.dependencies]
 # The latest Sphinx requires a recent Python version.
 Sphinx = [
-  { version = ">=7.4", python = ">=3.9,<3.10" },
   { version = ">=8.1", python = ">=3.10,<3.11" },
   { version = ">=8.2", python = "^3.11" },
 ]
