--- a/tools/grpc_generator/pyproject.toml
+++ b/tools/grpc_generator/pyproject.toml
@@ -23,12 +23,21 @@ click = [
 # When updating the grpcio-tools version, also update the minimum grpcio version
 # and regenerate gRPC stubs.
 grpcio-tools = [
+  # requires protobuf v4 or later
   { version = "1.49.1", python = ">=3.10,<3.12" },
   { version = "1.59.0", python = ">=3.12,<3.13" },
+  # requires protobuf v5 or later
   { version = "1.67.0", python = ">=3.13,<3.14" },
+  # requires protobuf v6 or later
   { version = "1.75.1", python = "^3.14" },
 ]
-mypy-protobuf = ">=3.6"
+# mypy-protobuf 3.6 is the last version that supports protobuf v4.
+mypy-protobuf = [
+  # requires protobuf v4 or later
+  {version = ">=3.6,<3.7", python = ">=3.10,<3.14"},
+  # requires protobuf v6 or later
+  {version = ">=3.6", python = "^3.14"}
+]
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
