--- a/packages/ni.datamonikers.v1.client/pyproject.toml
+++ b/packages/ni.datamonikers.v1.client/pyproject.toml
@@ -30,6 +30,7 @@ requires-python = '>=3.10,<4.0'
 
 [project.urls]
 repository = "https://github.com/ni/ni-apis-python"
+documentation = "https://nidatamonikersv1client.readthedocs.io/en/latest/"
 
 [tool.poetry]
 packages = [{include = "ni", from = "src"}]
