--- a/packages/ni-grpc-extensions/pyproject.toml
+++ b/packages/ni-grpc-extensions/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni-grpc-extensions"
-version = "1.1.0.dev0"
+version = "1.1.0"
 license = "MIT"
 description = "gRPC Extensions"
 authors = [{name = "NI", email = "opensource@ni.com"}]
