--- a/packages/ni.measurementlink.proto/pyproject.toml
+++ b/packages/ni.measurementlink.proto/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.measurementlink.proto"
-version = "1.1.0.dev0"
+version = "1.1.0"
 license = "MIT"
 description = "Protobuf data types for NI gRPC APIs"
 authors = [{name = "NI", email = "opensource@ni.com"}]
