--- a/packages/ni.grpcdevice.v1.proto/pyproject.toml
+++ b/packages/ni.grpcdevice.v1.proto/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.grpcdevice.v1.proto"
-version = "1.1.0.dev0"
+version = "1.1.0"
 license = "MIT"
 description = "Protobuf generated code for the nidevice_grpc gRPC API"
 authors = [{name = "NI", email = "opensource@ni.com"}]
