--- a/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.measurementlink.discovery.v1.client"
-version = "1.1.0.dev1"
+version = "1.1.0"
 license = "MIT"
 description = "gRPC Client for NI Discovery Service"
 authors = [{name = "NI", email = "opensource@ni.com"}]
