--- a/packages/ni.measurements.metadata.v1.proto/pyproject.toml
+++ b/packages/ni.measurements.metadata.v1.proto/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ni.measurements.metadata.v1.proto"
-version = "0.1.0.dev6"
+version = "1.0.9"
 license = "MIT"
 description = "Protobuf data types and service stub for NI metadata store gRPC APIs"
 authors = [{name = "NI", email = "opensource@ni.com"}]
@@ -11,7 +11,7 @@ maintainers = [
 readme = "README.md"
 keywords = ["ni-apis", "metadata-store"]
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Intended Audience :: Manufacturing",
   "Intended Audience :: Science/Research",
