--- a/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.discovery.v1.client/pyproject.toml
@@ -40,8 +40,8 @@ requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
 grpcio = {version=">=1.49.0,<2.0"}
-ni-grpc-extensions = { version = ">=0.1.0.dev1", allow-prereleases = true }
-ni-measurementlink-discovery-v1-proto = { version = ">=0.1.0.dev1", allow-prereleases = true }
+ni-grpc-extensions = { version = ">=1.1.0" }
+ni-measurementlink-discovery-v1-proto = { version = ">=1.1.0" }
 pywin32 = { version = ">=303", platform = "win32" }
 
 [tool.poetry.group.dev.dependencies]
