--- a/packages/ni.measurements.metadata.v1.client/pyproject.toml
+++ b/packages/ni.measurements.metadata.v1.client/pyproject.toml
@@ -37,8 +37,8 @@ packages = [{include = "ni", from = "src"}]
 requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
-ni-measurementlink-discovery-v1-client = { version = ">=1.1.0.dev0", allow-prereleases = true }
-ni-measurements-metadata-v1-proto = { version = ">=0.1.0.dev5", allow-prereleases = true }
+ni-measurementlink-discovery-v1-client = { version = ">=1.1.0" }
+ni-measurements-metadata-v1-proto = { version = ">=1.0.0" }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
