--- a/packages/ni.measurements.data.v1.proto/pyproject.toml
+++ b/packages/ni.measurements.data.v1.proto/pyproject.toml
@@ -39,9 +39,9 @@ requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
 protobuf = {version=">=4.21"}
-ni-datamonikers-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurements-metadata-v1-proto = { version = ">=0.1.0.dev5", allow-prereleases = true }
-ni-protobuf-types = { version = ">=0.1.0.dev3", allow-prereleases = true }
+ni-datamonikers-v1-proto = { version = ">=1.0.0" }
+ni-measurements-metadata-v1-proto = { version = ">=1.0.0" }
+ni-protobuf-types = { version = ">=1.1.0" }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
