--- a/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
@@ -50,12 +50,12 @@ nidmm = { version = ">=1.4.4", extras = ["grpc"], optional = true }
 nifgen = { version = ">=1.4.4", extras = ["grpc"], optional = true }
 niscope = { version = ">=1.4.4", extras = ["grpc"], optional = true }
 niswitch = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-ni-measurementlink-sessionmanagement-v1-proto = { version = ">=0.1.0.dev2", allow-prereleases = true }
-ni-measurementlink-pinmap-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-grpcdevice-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-grpc-extensions = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-discovery-v1-client = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-measurementlink-sessionmanagement-v1-proto = { version = ">=1.1.0" }
+ni-measurementlink-pinmap-v1-proto = { version = ">=1.1.0" }
+ni-measurementlink-proto = { version = ">=1.1.0" }
+ni-grpcdevice-v1-proto = { version = ">=1.1.0" }
+ni-grpc-extensions = { version = ">=1.1.0" }
+ni-measurementlink-discovery-v1-client = { version = ">=1.1.0" }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
