--- a/packages/ni.measurementlink.pinmap.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.pinmap.v1.client/pyproject.toml
@@ -39,12 +39,12 @@ requires-poetry = '>=2.1,<3.0'
 
 [tool.poetry.dependencies]
 grpcio = {version=">=1.49.0,<2.0"}
-ni-grpc-extensions = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-discovery-v1-client = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-measurement-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-measurement-v2-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
-ni-measurementlink-sessionmanagement-v1-client = { version = ">=0.1.0.dev2", allow-prereleases = true }
-ni-measurementlink-pinmap-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-grpc-extensions = { version = ">=1.1.0" }
+ni-measurementlink-discovery-v1-client = { version = ">=1.1.0" }
+ni-measurementlink-measurement-v1-proto = { version = ">=1.1.1" }
+ni-measurementlink-measurement-v2-proto = { version = ">=1.1.1" }
+ni-measurementlink-sessionmanagement-v1-client = { version = ">=1.1.0" }
+ni-measurementlink-pinmap-v1-proto = { version = ">=1.1.0" }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
