--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,7 +12,8 @@
             ],
             "extends": [
                 "schedule:weekly"
-            ]
+            ],
+            "minReleaseAge": "2d"
         }
     ]
 }
