--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,7 +13,7 @@
             "extends": [
                 "schedule:weekly"
             ],
-            "minReleaseAge": "2d"
+            "minimumReleaseAge": "1 day"
         }
     ]
 }
