Allow third_party/ni-apis to update in 2 days after changes instead of 14 days (#292)
* Allow third_party/ni-apis to update in 2 days after changes instead of 14.

* Fix and validate renovate configuration. Change to 1 day.

---------

Co-authored-by: Joel Dixon <joel.dixon@emerson.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,7 +12,8 @@
             ],
             "extends": [
                 "schedule:weekly"
-            ]
+            ],
+            "minimumReleaseAge": "1 day"
         }
     ]
 }
